--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -13,3 +13,28 @@
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
 }
+
+.loading {
+    font-size: 50px;
+    color: white;
+}
+
+.chat-welcome {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    color: #adadad;
+}
+
+.chat-welcome img {
+    width: 60px;
+}
+
+.chat-welcome p {
+    font-size: 20px;
+    font-weight: 500;
+    color: #383838;
+}
