--- a/src/components/LeftSidebar/LeftSidebar.css
+++ b/src/components/LeftSidebar/LeftSidebar.css
@@ -209,3 +209,11 @@
 .ls-search input:focus {
   outline: none;
 }
+
+/* .friends.border img {
+    border: 3px solid #07fff3;
+}
+
+.friends.border div span {
+    color: #07fff3;   
+} */
